stukje pools gedaan

--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -86,11 +86,11 @@ These lexical entries lead to a grammaticality pattern as shown in Table \ref{tb
     \label{tbl:overview-intonly}
 \end{table}
 
-First consider the situation in which the internal and the external case match. The light head consists of phi- and case-feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
+First consider the situation in which the internal and the external case match. The light head consists of a phi- and case-feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that  the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of phi- and case-features. The relative pronoun consists of the same features plus an additional feature \tsc{rel} and a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The features of the light head structurally form a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi- and case-feature portmanteau. The relative pronoun consists of a phi- and case-feature portmonteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of phi- and case-features and the feature \tsc{rel}. The light head lacks feature \tsc{rel} compared to the relative pronoun, but is contains a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). Neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi- and case-feature portmonteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). These lexical entries create such syntactic structures that neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
 In Chapter \ref{ch:typology}, I showed that Modern German is a language of the internal-only type. In this chapter, I show that Modern German light heads and relative pronouns have this type of structure described in Figure \ref{fig:rel-lh-intonly-simple}. I give a compact version of the structures in Figure \ref{fig:rel-lh-mg}.
 
@@ -160,7 +160,7 @@ Finally, I compare the constituents of the light head and the relative pronoun. 
 
 \section{The Modern German relative pronoun}\label{sec:mg-rel}
 
-In the introduction of this chapter, I suggested that in Modern German features of the relative pronoun are spelled out in such a way that they form the constituency shown in \ref{ex:simple-intonly-rp}.
+In the introduction of this chapter, I suggested that in Modern German features of the relative pronoun are spelled out in such a way that they form the constituents shown in \ref{ex:simple-intonly-rp}.
 
 \ex.\label{ex:simple-intonly-rp}
 \begin{forest} boom
@@ -191,7 +191,7 @@ In the introduction of this chapter, I suggested that in Modern German features 
 
 In Chapter \ref{ch:the-basic-idea}, I suggested that relative pronouns consist of at least three features: \tsc{rel}, ϕ and \tsc{k}.
 In this section, I show that relative pronoun consists of more features than that.
-Crucially, the main claim I made in Chapter \ref{ch:the-basic-idea} remains unchanged: Modern German has a portmanteau for the features that correspond to phi- and case-features and a separate lexical entry for the features the light head does not contain.
+Crucially, the main claim I made in Chapter \ref{ch:the-basic-idea} remains unchanged: internal-only languages (of which Modern German is an example) have a portmanteau for the features that correspond to phi- and case-features and a morpheme that spells out the features the light head does not contain.
 I show the complete structure that I work towards in this section in \ref{ex:mg-rp}.\footnote{
 The \tsc{k}P in this functional sequence is a placeholder for multiple case projections.
 When the extra light head is the accusative, the \tsc{k}P consists of the features \tsc{f}1 and \tsc{f}2, and they form the \tsc{acc}P.
