--- a/deriving-matching.tex
+++ b/deriving-matching.tex
@@ -82,32 +82,29 @@ These lexical entries lead to a grammaticality pattern as shown in Table \ref{tb
   \tsc{k}\scsub{int} = \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}], [ϕ]                               &
   [\tsc{rel}], [\tsc{k}\scsub{1}], [ϕ]                  &
-  [\tsc{rel}][[\tsc{k}\scsub{1}][ϕ]] > [\tsc{k}\scsub{1}][ϕ] &
-  \tsc{lh} & \tsc{rp}\scsub{int/ext} \\
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
   \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}], [ϕ]                               &
-  [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}], [ϕ] &
-  no containment &
-  none & * \\
+  [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}]], [ϕ] &
+  no & none & *                                         \\
   \tsc{k}\scsub{int} < \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}]], [ϕ]             &
   [\tsc{rel}], [\tsc{k}\scsub{1}], [ϕ]                  &
-  no containment &
-  none & * \\
+  no & none & *                                         \\
   \bottomrule
   \end{tabular}
   \end{adjustbox}
 \label{tbl:overview-matching}
 \end{table}
 
-First consider the situation in which the internal and the external case match. The light head consists of phi-feature morpheme and a case-feature morpheme. The relative pronoun consists of the same morphemes plus an additional morpheme that spells out the feature \tsc{rel}. The light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
-In this situation, the fact that there is a phi- and case-feature portmanteau (as in internal-only languages) or two separate morphemes for the features (as in matching languages) does not make a difference for the containment relation.
+First consider the situation in which the internal and the external case match. The light head consists of a phi-feature morpheme and a case-feature morpheme. The relative pronoun consists of the same two morphemes plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such a structure that  the light head structurally forms a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+In this situation, the fact that there is a phi- and case-feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does not make a difference for the containment and for the grammaticality.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of phi- and case-features. The relative pronoun consists of the same features plus an additional feature \tsc{rel} and a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The features of the light head structurally form a constituent within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun bearing the internal and external case surfaces.
-In Chapter \ref{ch:the-basic-idea}, I suggested that the difference in structures between the internal-only type and the matching type is a consequence of spellout. The change in constituency is a result of the fact that case projections correspond to their own morpheme in matching languages and they are spelled out together with phi-features in internal-only languages. In Chapter \ref{ch:deriving-matching}, I showed that Modern German indeed has a portmanteau for case and phi-features. In this Chapter, I show that Polish has two morphemes that corresponds to case and phi-features.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi-feature morpheme and a case-feature morpheme. The relative pronoun consists of the same phi-feature morpheme, a case-morpheme that that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-matching}) plus an additional morpheme that spells out the feature \tsc{rel}. These lexical entries create such syntactic structures that neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+In this situation, the fact that there is a phi- and case-feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does make a difference for the containment and for the grammaticality: this situation is grammatical in internal-only languages and it is not in matching languages.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of phi- and case-features and the feature \tsc{rel}. The light head lacks feature \tsc{rel} compared to the relative pronoun, but is contains a more complex case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). Neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
-also same as in modern german
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi-feature morpheme, a case-feature morpheme and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). These lexical entries create such syntactic structures that neither the light head nor the relative pronoun structurally forms a constituent within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+In this situation, the fact that there is a phi- and case-feature portmanteau (as in internal-only languages) or there are two separate morphemes for the features (as in matching languages) does not make a difference for the containment and for the grammaticality.
 
 In Chapter \ref{ch:typology}, I showed that Polish is a language of the matching type. In this chapter, I show that Polish light heads and relative pronouns have this type of structure described in Figure \ref{fig:rel-lh-matching-simple}. I give a compact version of the structures in Figure \ref{fig:rel-lh-pol}.
 
@@ -204,7 +201,7 @@ Finally, I compare the constituents of the light head and the relative pronoun. 
 
 \section{The Polish relative pronoun}\label{sec:pol-rel}
 
-In the introduction of this chapter, I suggested that in Polish features of the relative pronoun are spelled out in such a way that they form the constituency shown in \ref{ex:simple-matching-rp}.
+In the introduction of this chapter, I suggested that in Polish features of the relative pronoun are spelled out in such a way that they form the constituents shown in \ref{ex:simple-matching-rp}.
 
 \ex.\label{ex:simple-matching-rp}
 \begin{forest} boom
@@ -223,38 +220,11 @@ In the introduction of this chapter, I suggested that in Polish features of the 
   ]
 \end{forest}
 
-In Chapter \ref{ch:deriving-internalonly}, I suggested that Modern German relative pronouns consist of the features in the following functional sequence.
+In Figure \ref{ex:simple-matching-rp} I only show three features: \tsc{rel}, ϕ and \tsc{k}. In Chapter \ref{ch:deriving-onlyinternal} I showed that Modern German relative pronouns contain more features than that. In this section, I show that Polish relative pronouns consist of the same features.
+Crucially, the main claim I made in Chapter \ref{ch:the-basic-idea} remains unchanged: Polish has a separate morpheme for phi-features, one for case-features and one for the features the light head does not contain. Actually, the morpheme for case-features contains a number feature and the phi-feature morpheme does not contain one, but this does not influence the point here.
+I show the complete structure that I work towards in this section in \ref{ex:pol-rp}.
 
-\ex.\label{ex:pol-fseq-rel}
-\begin{adjustbox}{max width=0.9\textwidth}
-  \begin{forest} boom
-   [\tsc{k}P
-       [\tsc{k}]
-       [\tsc{rel}P
-           [\tsc{rel}]
-           [\tsc{wh}P
-               [\tsc{wh}]
-               [\tsc{ind}P
-                   [\tsc{ind}]
-                   [\tsc{an}P
-                       [\tsc{an}]
-                       [\tsc{cl}P
-                           [\tsc{cl}]
-                            [\tsc{ref}]
-                       ]
-                   ]
-               ]
-           ]
-       ]
-   ]
-  \end{forest}
-\end{adjustbox}
-
-In this section, I show that Polish relative pronouns are made up of the same features. They differ in how the features are distibuted over different morphemes.
-Crucially, the main claim I made in Chapter \ref{ch:the-basic-idea} remains unchanged: in Polish, phi- and case-features are spread over two different morphemes.
-In this section, I argue that Polish relative pronouns have the structure shown in \ref{ex:mg-rp}.
-
-\ex.\label{ex:pol-rel}
+\ex.\label{ex:pol-rp}
 \begin{adjustbox}{max width=0.9\textwidth}
 \begin{forest} boom
   [\tsc{rel}P, s sep=40mm
@@ -318,9 +288,10 @@ I discuss two relative pronouns: the animate accusative and the animate dative. 
 
 I decompose the relative pronouns in three morphemes: \tit{k}, \tit{o} and the suffix (\tit{go} or \tit{mu}). For each morpheme, I discuss which features they spell out, I give their lexical entries, and I show how I construct the relative pronouns by combining the separate morphemes.
 
-I start with the suffixes \tit{go} and \tit{mu}. First I focus on \tit{mu}.
+I start with the suffixes \tit{go} and \tit{mu}.
+These two morphemes correspond to what I called the case-feature morpheme in Chapter \ref{ch:the-basic-idea} and the introduction to this chapter. In addition, the morphemes spell out a number feature.
 
-In Table \ref{tbl:pol-datives}, I show three forms in which there is a syncretism between the neuter and the masculine in the dative case.
+First I focus on \tit{mu} and I extend the analysis to \tit{go}. Consider Table \ref{tbl:pol-datives}.
 
 \begin{table}[htbp]
   \center
@@ -337,7 +308,7 @@ In Table \ref{tbl:pol-datives}, I show three forms in which there is a syncretis
   \label{tbl:pol-datives}
 \end{table}
 
-In Table \ref{tbl:pol-datives}, the complete pronouns are syncretic. I set up a system that can derive the syncretism between the two genders. Doing this allows me to establish which features the morpheme \tit{mu} spells out.
+The table shows three forms in which there is a syncretism between the neuter and the masculine in the dative case. The complete pronouns are syncretic. I set up a system that can derive the syncretism between the two genders. Doing this allows me to establish which features the morpheme \tit{mu} spells out.
 
 I discussed in Chapter \ref{ch:decomposition} that syncretisms can be derived in Nanosyntax via the Superset Principle. The lexicon contains a lexical entry that is specified for the form that corresponds to the most features. To illustrate this, I repeat the lexical entry for the Dutch \tit{jullie} `you' in \ref{ex:dutch-jullie-lexicon-rep}.
 
@@ -350,7 +321,7 @@ I discussed in Chapter \ref{ch:decomposition} that syncretisms can be derived in
           [\ac{nom}P
               [\ac{f}1]
               [2\ac{pl}P
-                  \phantom{xxx}, roof]
+                  [\phantom{xxx}, roof]
               ]
           ]
       ]
@@ -361,8 +332,7 @@ I discussed in Chapter \ref{ch:decomposition} that syncretisms can be derived in
 
 \tit{Jullie} is syncretic between nominative, accusative and dative. It is specified for dative in the lexicon, because the dative contains the accusative and the nominative. The nominative and accusative second person plural in Dutch are spelled out as \tit{jullie} as well, because the \tsc{dat}P contains the \tsc{acc}P which contains \tsc{nom}P (Superset Principle), and there is no more specific lexical entry available in Dutch (Elsewhere Condition). It is important that the potentially unused features (so the \tsc{f}3 or \tsc{f}3 and the \tsc{f2}) are at the top, so that the constituent that needs to be spelled out is still contained in the lexical tree.
 
-In what follows, I show how I can derive the syncretisms for the forms in Table \ref{tbl:pol-datives}. Different from \tit{jullie}, these forms consists of two morphemes: \tit{je}/\tit{nie}/\tit{te} and \tit{mu}.
-I do not discuss the feature content of the morphemes \tit{je}, \tit{nie} and \tit{te}, but I know that all three forms combined with \tit{mu} spell out at least the features I give in \ref{ex:pol-mu-dat-fseq}.
+In what follows, I show how I can derive the syncretisms for the forms in Table \ref{tbl:pol-datives}. I propose that \tit{jego}, \tit{niego} and \tit{tego} spell out the syntactic structure in \ref{ex:pol-mu-dat-fseq}.
 
 \ex.\label{ex:pol-mu-dat-fseq}
 \begin{forest} boom
@@ -389,7 +359,14 @@ I do not discuss the feature content of the morphemes \tit{je}, \tit{nie} and \t
   ]
 \end{forest}
 
-The morphemes \tit{jego}, \tit{niego} and \tit{tego} are syncretic between the masculine and the neuter. This can be captured if the highest feature in the lexical tree is the feature that distinguishes masculine and neuter gender. In such case, the morpheme can easily spell both the structure with or without the masculine feature. The feature that distinguishes masculine and neuter gender is the feature \tsc{an} \citep{harley2002}. Therefore, the lexical entry is as given in \ref{ex:pol-entry-nie/je/te}.
+I do not discuss the feature content of the morphemes \tit{je}, \tit{nie} and \tit{te}, but I call them XP.
+Following the functional sequence I suggested in Chapter \ref{ch:deriving-onlyinternal}, all forms contain the feature \tsc{cl} for inanimate/neuter gender, \tsc{an} for animate/masculine gender and \tsc{ind} for singular number and case features up to the dative.
+
+The forms \tit{jego}, \tit{niego} and \tit{tego} are syncretic between the masculine and the neuter. This can be captured if the highest feature in the lexical tree is the feature that distinguishes masculine and neuter gender.
+This distinguishing feature is the feature \tsc{an} \citep{harley2002}, which is not the the highest feature in \ref{ex:pol-mu-dat-fseq}. Fortunately, different from \tit{jullie}, the forms are bimorphemic: they contain morphemes \tit{je}, \tit{nie} or \tit{te} and the morpheme \tit{mu}.
+Now the highest feature of one of the two morphemes needs to be the feature \tsc{an}.
+
+If the feature \tsc{an} can be either present or absent, the forms can easily spell both the structure with or without the feature \tsc{an}. Therefore, the lexical entry is as given in \ref{ex:pol-entry-nie/je/te}.
 
 \ex. \label{ex:pol-entry-nie/je/te}
 \begin{forest} boom
