--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -206,7 +206,7 @@ This change in constituency is a direct consequence the lexical entries that are
 Exactly this type of difference is what is going to lead to the different grammaticality patterns in headless relatives. Languages contain different lexical entries which spell out features of the light head and the relative pronoun.
 The different lexical entries lead to differences in constituency. The different constituents lead to differences in whether or the light head and the relative pronoun can be deleted. Lastly, whether or not the light head and the relative pronoun can be deleted lead to different grammaticality patterns. I summarize this in \ref{ex:summary-differences-languages}.
 
-\ex.\label{ex:summary-differences-languages} lexical entries $\rightarrow$ containment $\rightarrow$ deletion possibility $\rightarrow$ grammaticality pattern
+\ex.\label{ex:summary-differences-languages} lexical entries $\rightarrow$ structure $\rightarrow$ containment $\rightarrow$ deletion $\rightarrow$ surface pronoun
 
 In sum, I assume that headless relative clauses are derived from light-headed relatives. Light-headed relatives contain a light head and relative pronoun. In a headless relative either the light head or the relative pronoun is deleted.
 The necessary requirement for deletion is that the deleted element (either the light head or relative pronoun) forms a constituent within the other element.
@@ -460,18 +460,15 @@ The comparisons between the light head and the relative pronoun in different cas
   \tsc{k}\scsub{int} = \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}[ϕ]]                                 &
   [\tsc{rel}], [\tsc{k}\scsub{1}[ϕ]]                    &
-  [\tsc{rel}][\tsc{k}\scsub{1}[ϕ]] > [\tsc{k}\scsub{1}[ϕ]] &
-  \tsc{lh} & \tsc{rp}\scsub{int/ext} \\
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
   \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}[ϕ]]                                 &
   [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}[ϕ]]]  &
-  [\tsc{rel}][\tsc{k}\scsub{2}[\tsc{k}\scsub{1}[ϕ]]] > [\tsc{k}\scsub{1}[ϕ]] &
-  \tsc{lh} & \tsc{rp}\scsub{int} \\
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
   \tsc{k}\scsub{int} < \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}[ϕ]]]               &
   [\tsc{rel}], [\tsc{k}\scsub{1}[ϕ]]                    &
-  no containment &
-  none & * \\
+  no & none & *                                         \\
   \bottomrule
   \end{tabular}
   \end{adjustbox}
@@ -936,18 +933,15 @@ The comparisons between the light head and the relative pronoun in different cas
   \tsc{k}\scsub{int} = \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}], [ϕ]                               &
   [\tsc{rel}], [\tsc{k}\scsub{1}], [ϕ]                  &
-  [\tsc{rel}][[\tsc{k}\scsub{1}][ϕ]] > [\tsc{k}\scsub{1}][ϕ] &
-  \tsc{lh} & \tsc{rp}\scsub{int/ext} \\
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
   \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}], [ϕ]                               &
-  [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}], [ϕ] &
-  no containment &
-  none & * \\
+  [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}]], [ϕ]&
+  no & none & *                                         \\
   \tsc{k}\scsub{int} < \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}]], [ϕ]             &
   [\tsc{rel}], [\tsc{k}\scsub{1}], [ϕ]                  &
-  no containment &
-  none & * \\
+  no & none & *                                         \\
   \bottomrule
   \end{tabular}
   \end{adjustbox}
@@ -1320,9 +1314,9 @@ In Figure \ref{fig:nom-nom-unres}, I give an example of the second possible ligh
   \label{fig:nom-nom-unres}
 \end{figure}
 
-The light head corresponds to \tit{X-Y}, illustrated by the circle around the XP and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it. The relative pronoun corresponds to \tit{X-Y} too, illustrated by the circle around the \tsc{rel}P and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it.
+The light head corresponds to \tit{XY}, illustrated by the circle around the XP and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it. The relative pronoun corresponds to \tit{XY} too, illustrated by the circle around the \tsc{rel}P and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it.
 I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The light head (the XP realized by \tit{X-er}) is syncretic with the relative pronoun (the \tsc{rel}P realized by \tit{X-Y}).
+The light head (the XP realized by \tit{XY}) is syncretic with the relative pronoun (the \tsc{rel}P realized by \tit{XY}).
 As the two forms are entirely syncretic, either the light head or the relative pronoun can be deleted. I delete the relative pronoun here, as I discuss how it is possible for the relative pronoun to be deleted even though it has a feature less than the light head.
 I illustrate this by marking the content of the dotted circle for the relative pronoun gray.
 
@@ -1415,7 +1409,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
   \label{fig:acc-nom-unres}
 \end{figure}
 
-The light head corresponds to \tit{X-Z}, illustrated by the circle around the XP and the \tit{X} under it and the circle around the \tsc{acc}P and the \tit{Z} under it. The relative pronoun corresponds to \tit{X-Y}, illustrated by the circle around the \tsc{rel}P and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it.
+The light head corresponds to \tit{XZ}, illustrated by the circle around the XP and the \tit{X} under it and the circle around the \tsc{acc}P and the \tit{Z} under it. The relative pronoun corresponds to \tit{XY}, illustrated by the circle around the \tsc{rel}P and the \tit{X} under it and the circle around the \tsc{nom}P and the \tit{Y} under it.
 I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
 The relative pronoun is no longer syncretic with the relative pronoun or a constituent within it. Therefore, the relative pronoun cannot be deleted, which I illustrate by leaving the content of both dotted circles unfilled.
 As none of the items is deleted, it is expected that there is no grammatical headless relative possible.
@@ -1439,18 +1433,19 @@ The comparisons between the constituents within the light heads and the relative
   \tsc{k}\scsub{int} = \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}[ϕ]]                                 &
   [\tsc{rel}], [\tsc{k}\scsub{1}[ϕ]]                    &
-  [\tsc{rel}][\tsc{k}\scsub{1}[ϕ]] > [\tsc{k}\scsub{1}[ϕ]] &
-  \tsc{lh} & \tsc{rp}\scsub{int/ext}                    \\
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
+  \tsc{k}\scsub{int} = \tsc{k}\scsub{ext}               &
+  \tit{/X/}, \tit{/Y/}                                  &
+  \tit{/X/}, \tit{/Y/}                                  &
+  form & \tsc{rp} & \tsc{lh}\scsub{ext}                 \\
   \tsc{k}\scsub{int} > \tsc{k}\scsub{ext}               &
   [\tsc{k}\scsub{1}[ϕ]]                                 &
   [\tsc{rel}], [\tsc{k}\scsub{2}[\tsc{k}\scsub{1}[ϕ]]]  &
-  [\tsc{rel}][\tsc{k}\scsub{2}[\tsc{k}\scsub{1}[ϕ]]] > [\tsc{k}\scsub{1}[ϕ]] &
-  \tsc{lh} & \tsc{rp}\scsub{int}                        \\
+  structure & \tsc{lh} & \tsc{rp}\scsub{int}            \\
   \tsc{k}\scsub{int} < \tsc{k}\scsub{ext}               &
-  \tit{/X/}, \tit{/Y/}                                    &
-  \tit{/X/}, \tit{/Y/}                                    &
-  \tit{/XY/} > \tit{/XY/}                               &
-  \tsc{rp} & \tsc{lh}\scsub{ext} \\
+  \tit{/X/}, \tit{/Y/}                                  &
+  \tit{/X/}, \tit{/Y/}                                  &
+  form & \tsc{rp} & \tsc{lh}\scsub{ext}                 \\
   \bottomrule
   \end{tabular}
   \end{adjustbox}
